--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "icecast-source": "^0.1.0",
     "progress": "^1.1.8",
     "request-promise": "^1.0.2",
+    "restify": "^4.0.3",
     "schedule": "^0.1.0",
     "streammachine": "^0.7.0",
     "winston": "^2.1.1"
