--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coffee-script": "^1.10.0",
     "icecast-source": "^0.1.0",
     "progress": "^1.1.8",
+    "pubnub": "^3.7.18",
     "request-promise": "^1.0.2",
     "restify": "^4.0.3",
     "schedule": "^0.1.0",
