--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "coffee-script": "^1.10.0",
     "icecast-source": "^0.1.0",
     "progress": "^1.1.8",
-    "pubnub": "^3.7.18",
     "request-promise": "^1.0.2",
     "restify": "^4.0.3",
     "schedule": "^0.1.0",
+    "socket.io": "^1.4.5",
     "streammachine": "^0.7.0",
     "winston": "^2.1.1"
   }
