--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "reddit-radio",
+  "name": "streamit",
   "version": "0.1.0",
   "description": "Fetches the most popular links from a list of subreddits, and queues them onto a icecast server.",
   "main": "index.js",
+  "bin": "index.js",
+  "preferGlobal": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
